Fix: Don't wrap emoticon

--- a/src/pages/index/stylus/activity.styl
+++ b/src/pages/index/stylus/activity.styl
@@ -10,6 +10,9 @@ section#activity
 			color: #444
 			font-size: 18px
 
+		span.nowrap
+			white-space: nowrap
+
 	.gallery
 		display: flex
 		flex-wrap: wrap
